# rag-post-linkedin

./: hello.py  principal.ipynb  pyproject.toml
