[project]
name = "rag-linkedin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.12",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.2.12",
    "pypdf>=5.1.0",
    "langchain-chroma>=0.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
